--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "dotenv": "^6.2.0",
-    "request": "^2.88.0"
+    "react-stripe-checkout": "^2.6.3",
+    "request": "^2.88.0",
+    "stripe": "^6.19.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
